--- a/scss/_gallery-grid.scss
+++ b/scss/_gallery-grid.scss
@@ -17,9 +17,9 @@ $gallery-grid-spacing-unit--large: ($gallery-grid-spacing-unit * 2) !default;
             -ms-flex-wrap: wrap;
                 flex-wrap: wrap;
 
-        -webkit-box-pack: center;
-           -ms-flex-pack: center;
-         justify-content: center;
+                  -ms-flex-pack: center;
+        -webkit-justify-content: center;
+                justify-content: center;
 
         margin-bottom: $gallery-grid-spacing-unit;
     }
